Fix alignment for code tag in article

--- a/source/stylesheets/syntax_github.scss
+++ b/source/stylesheets/syntax_github.scss
@@ -10,6 +10,8 @@ code {
   font-size: .875em;
   margin: 0 2px;
   padding: 0 5px;
+  line-height: 1.3em;
+  vertical-align: middle;
   white-space: nowrap;
 }
 
